--- a/app/src/main/res/layout/activity_hoved_aktivitet.xml
+++ b/app/src/main/res/layout/activity_hoved_aktivitet.xml
@@ -14,10 +14,10 @@
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="0dp"/>
 
-    <FrameLayout
-        android:id="@+id/fragmentView"
+    <fragment
+        android:id="@+id/fragment"
+        android:name="dk.colle.galgeleg.StartMenu_Frag"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
