--- a/app/src/main/res/layout/gaettedebogstaver_element.xml
+++ b/app/src/main/res/layout/gaettedebogstaver_element.xml
@@ -7,5 +7,6 @@
         android:id="@+id/bogstavGaettet_element"
         android:layout_width="52dp"
         android:layout_height="wrap_content"
-        android:text="Button" />
+        android:text="Button"
+        android:clickable="false"/>
 </RelativeLayout>
