--- a/app/src/main/res/layout/frag_vundettabt_spil.xml
+++ b/app/src/main/res/layout/frag_vundettabt_spil.xml
@@ -1,6 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/spilSlut_duHarVundetTabt"
+        android:layout_width="match_parent"
+        android:layout_height="52dp"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="36sp" />
+
+    <TextView
+        android:id="@+id/spilSlut_OrdetVar"
+        android:layout_width="match_parent"
+        android:layout_height="52dp"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="30sp" />
+
+    <TextView
+        android:id="@+id/spilSlut_AntalForsøg"
+        android:layout_width="match_parent"
+        android:layout_height="52dp"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="30sp" />
+
+    <FrameLayout
+        android:id="@+id/spilSlut_nytSpilBox"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </FrameLayout>
+
+</LinearLayout>
