--- a/app/src/main/res/layout/activity_start_menu.xml
+++ b/app/src/main/res/layout/activity_start_menu.xml
@@ -32,46 +32,16 @@
         app:layout_constraintTop_toBottomOf="@+id/textView"
         app:srcCompat="@drawable/forkert6" />
 
-    <LinearLayout
-        android:layout_width="246dp"
-        android:layout_height="236dp"
-        android:layout_marginTop="7dp"
-        android:orientation="vertical"
+    <FrameLayout
+        android:id="@+id/start_menu_knapper_box"
+        android:layout_width="277dp"
+        android:layout_height="241dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.217">
+        app:layout_constraintVertical_bias="0.136">
 
-        <Button
-            android:id="@+id/startSpil"
-            android:layout_width="248dp"
-            android:layout_height="58dp"
-            android:backgroundTint="#D6D6D6"
-            android:text="Start spil" />
-
-        <Button
-            android:id="@+id/highScore"
-            android:layout_width="248dp"
-            android:layout_height="58dp"
-            android:backgroundTint="#D6D6D6"
-            android:text="Highscore" />
-
-        <Button
-            android:id="@+id/indstillinger"
-            android:layout_width="match_parent"
-            android:layout_height="58dp"
-            android:backgroundTint="#D6D6D6"
-            android:text="Indstillinger" />
-
-        <Button
-            android:id="@+id/hjaelp"
-            android:layout_width="248dp"
-            android:layout_height="58dp"
-            android:backgroundTint="#D6D6D6"
-            android:text="Hjælp" />
-
-    </LinearLayout>
+    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
