--- a/app/src/main/res/layout/activity_start_menu.xml
+++ b/app/src/main/res/layout/activity_start_menu.xml
@@ -10,7 +10,7 @@
     <TextView
         android:id="@+id/textView"
         android:layout_width="122dp"
-        android:layout_height="47dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:fontFamily="casual"
         android:text="Galgeleg"
