--- a/app/src/main/res/layout/highscore_liste_element.xml
+++ b/app/src/main/res/layout/highscore_liste_element.xml
@@ -21,6 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="TextView"
+            android:textAlignment="textStart"
             android:textSize="14sp"
             android:textStyle="bold" />
 
@@ -30,6 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="TextView"
+            android:textAlignment="textEnd"
             android:textSize="14sp"
             android:textStyle="bold" />
     </LinearLayout>
