Man kan selv sætte ord ind nu

--- a/app/src/main/res/layout/frag_start_spil.xml
+++ b/app/src/main/res/layout/frag_start_spil.xml
@@ -114,7 +114,7 @@
         android:layout_marginTop="28dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Indtast et bogstav her"
+        android:hint="Indtast et bogstav her"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/gaettedeBogstaverLayout" />
 
