--- a/app/src/main/res/layout/activity_ord_list.xml
+++ b/app/src/main/res/layout/activity_ord_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".OrdList_Frag">
+    tools:context=".OrdList_activity">
 
     <TextView
         android:id="@+id/vaelgOrdListeText"
@@ -69,7 +69,7 @@
         android:layout_height="55dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="28dp"
-        android:text="Godkend"
+        android:text="Tilføj"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/egneOrdSwitch" />
 
