--- a/app/src/main/res/layout/activity_hoved_aktivitet.xml
+++ b/app/src/main/res/layout/activity_hoved_aktivitet.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HovedAktivitet"
+    tools:context=".Hoved_activity"
     android:orientation="vertical">
 
     <FrameLayout
